[package]
name = "ashdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1.3"
byteorder = "1.5.0"
clap = "4.0"
crc = "3.2.1"
crc64fast = "1.1.0"
crossbeam-skiplist = "0.1.3"
libc = "0.2.166"
nom = "7.1"
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.14.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
