[package]
name = "ashdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = { version = "2.0", features = ["serde"] }
byteorder = "1.5.0"
clap = "4.0"
crc = "3.2.1"
crc64fast = "1.1.0"
crossbeam-skiplist = "0.1.3"
itertools = "0.14.0"
libc = "0.2.166"
nom = "7.1"
regex = "1.11.3"
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tempfile = "3.14.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
paste = "1.0"
